consistency service changes
